prueba de conflicto, cambio en master

--- a/blogpost.html
+++ b/blogpost.html
@@ -14,6 +14,9 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis libero aspernatur nobis dolorem asperiores, rerum iusto exercitationem dicta doloribus rem nam repellat delectus architecto minus nulla et. Amet, repellat illum!</p>
             </div>
+            <p>
+                eso se supone que no tien que causar un conflicto
+            </p>
         </div>
     </body>
 </html> 
