--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de cabecera</span>
+                <span id="tagline">Tu blog de maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
@@ -17,6 +17,8 @@
             <p>
                 eso se supone que no tien que causar un conflicto
             </p>
+            <p>
+subscribete y dale like            </p>
         </div>
     </body>
 </html> 
